--- a/deploy/conf.ini
+++ b/deploy/conf.ini
@@ -1,20 +1,19 @@
 [DEFAULT]
 
-DRIVER = OpenStack
+# OpenStack or AWS
+DRIVER = AWS
 
 DEFAULT_IMAGE = chesscloud-deps
 CLUSTER_NAME_PREFIX = chesscloud-
 WORKER_NAME_PREFIX = %(CLUSTER_NAME_PREFIX)sworker-
 MASTER_NAME_PREFIX = %(CLUSTER_NAME_PREFIX)smaster-
 FRONTEND_NAME_PREFIX = %(CLUSTER_NAME_PREFIX)sfrontend-
-SCALING_WORKER_IMAGE = 'chesscloud-worker-image'
 
+# Fabric configuration for accessing VMs
 env_user =
 env_password =
 env_gateway =
 env_key_filename =
-ex_keyname =
-
 
 
 [AWS]
@@ -22,10 +21,10 @@ MASTER_SIZE_NAME = t2.small
 WORKER_SIZE_NAME = t2.small
 FRONTEND_SIZE_NAME = t2.small
 
-#ACCESS_ID =
-#SECRET_ID =
-#ex_keyname =
-#env_key_filename =
+# AWS Authentication
+ACCESS_ID =
+SECRET_ID =
+ex_keyname =
 
 
 [OpenStack]
@@ -33,7 +32,8 @@ MASTER_SIZE_NAME = 1GB-1CPU-10GB
 WORKER_SIZE_NAME = 2GB-2CPU-10GB
 FRONTEND_SIZE_NAME = 1GB-1CPU-10GB
 
-#username =
-#password =
-#ex_tenant_name =
-#ex_force_auth_url =
+# OpenStack configuration
+username =
+password =
+ex_tenant_name =
+ex_force_auth_url =
